<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.goboomtown.connect.activity.MyProvidersActivity">
    <item
        android:id="@+id/action_end_call"
        android:orderInCategory="99"
        android:icon="@drawable/end_call_circle_on"
        android:title="@string/action_end_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_resolve"
        android:orderInCategory="100"
        android:title="@string/action_resolve"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_done"
        android:orderInCategory="101"
        android:title="@string/action_done"
        app:showAsAction="ifRoom" />

</menu>