<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/devModePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_developer_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/scanQRCodeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_scan_qr_code"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/pasteJSONConfiguration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_paste_json_configuration"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/pasteJSONPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/pastedJSON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_paste_json_here"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/pasteCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cancel"/>

                    <Button
                        android:id="@+id/pasteOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ok"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/enterParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_enter_parameters"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/enterParametersPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/serverSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_integration_id"/>

                    <EditText
                        android:id="@+id/integrationId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_enter_integration_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_api_key"/>

                    <EditText
                        android:id="@+id/apiKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_enter_api_key"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/enterCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cancel"/>

                    <Button
                        android:id="@+id/enterOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_ok"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/returnToDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_return_to_default"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</LinearLayout>